# cy26-projects

./: .gitignore  README.md
0617-自动剪辑视频/: .gitignore  README.md  pyproject.toml
0617-自动剪辑视频/discuss/: spacex宣传片分镜.md  剪辑计划-海边出海短视频.md  实现方案.md  微信文章PPT视频脚本.md
0617-自动剪辑视频/docs/: 自动剪辑工作流.md
0617-自动剪辑视频/ideal-glasses-hyperframes/: DESIGN.md  index.html  meta.json  package.json
0617-自动剪辑视频/remotion-fzd/: package-lock.json  package.json
0617-自动剪辑视频/remotion-fzd/public/: captions.json  fan-zhendong-voice.aiff  voiceover.txt
0617-自动剪辑视频/remotion-fzd/src/: FanzhendongKoubo.tsx  Root.tsx  caption-layer.tsx
0617-自动剪辑视频/scripts/: bootstrap.sh  run_all.sh  run_analyze.sh  run_edit.sh  run_ideal_glasses_demo.sh  run_ideal_glasses_verify.sh  run_plan.sh  run_prepare.sh  run_smoke.sh  run_tests.sh
0617-自动剪辑视频/scripts/fanzhendong/: run_assets.sh  run_install.sh  run_preview.sh  run_probe.sh  run_render.sh  run_still.sh
0617-自动剪辑视频/scripts/ideal-glasses/: run_hyperframes.sh
0617-自动剪辑视频/scripts/spacex/: run_audio.sh  run_init.sh  run_inspect.sh  run_lint.sh  run_preview.sh  run_render.sh  run_validate.sh  run_verify.sh
0617-自动剪辑视频/scripts/wechat-karpathy/: run_animation_map.sh  run_assets.sh  run_init.sh  run_inspect.sh  run_lint.sh  run_preview.sh  run_render.sh  run_validate.sh
0617-自动剪辑视频/spacex-promo/: DESIGN.md  index.html  meta.json  package.json
0617-自动剪辑视频/spacex-promo/styles/: base.css  visuals.css
0617-自动剪辑视频/src/auto_video_editing/: __init__.py  assets.py  cli.py  glasses_box_demo.py  hyperframes_assets.py  io.py  media.py  models.py  planner.py  subtitles.py
0617-自动剪辑视频/tests/: test_assets.py  test_media.py  test_planner.py  test_subtitles.py
0617-自动剪辑视频/wechat-karpathy-ppt-video/: DESIGN.md  index.html  meta.json  package.json
0617-自动剪辑视频/wechat-karpathy-ppt-video/styles/: base.css  scenes.css
0620-api-mcp-cli-demo/: .env.example  .gitignore  README.md  main.py  pyproject.toml
0620-api-mcp-cli-demo/scripts/: run_cli.sh  run_http.sh  run_mcp.sh  setup.sh
0620-api-mcp-cli-demo/src/weather/: __init__.py
0715-AiTrading/: .env.example  .gitignore  pyproject.toml
0715-AiTrading/deploy/launchd/: com.local.ai-trading.plist.template
0715-AiTrading/discuss/: AI模拟交易系统设计方案.md
0715-AiTrading/docs/: 架构与安全边界.md  运行手册.md
0715-AiTrading/scripts/: check.sh  common.sh  format.sh  setup.sh  start.sh  status.sh  stop.sh  test.sh
0715-AiTrading/scripts/config/: save_from_env.sh
0715-AiTrading/scripts/jobs/: check_tiingo_token.sh  run_backtest.sh  run_data_smoke.sh  run_postmarket.sh  run_premarket.sh  run_strategy_smoke.sh
0715-AiTrading/scripts/service/: install.sh  run.sh  uninstall.sh
0715-AiTrading/tests/: test_cli.py  test_config.py  test_logging_config.py  test_secrets.py
0715-AiTrading/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
loop-engineering-demo/: .gitignore  AI_Agent_工程范式进化论.pptx  jfc.txt  pyproject.toml
loop-engineering-demo/docs/: loop-engineering-demo.md
loop-engineering-demo/scripts/: ci.sh  self_heal_loop.sh  setup.sh
loop-engineering-demo/tests/: test_inventory.py  test_pricing.py
(+292 files in other folders)
