[project]
name = "auto-video-editing"
version = "0.1.0"
description = "自动剪辑视频工作流：分析素材、生成剪辑计划、导出 9:16 字幕短视频"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]

[project.scripts]
auto-video-edit = "auto_video_editing.cli:main"
auto-video-transcribe = "auto_video_editing.cli:transcribe_main"
auto-video-hyperframes-assets = "auto_video_editing.hyperframes_assets:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_video_editing"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
