[project]
name = "weather-demo"
version = "0.1.0"
description = "API → CLI / MCP / HTTP 三层封装示范：城市+日期天气查询"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40",
    "pydantic>=2.0",
    "typer>=0.12",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "mcp>=1.2",
    "python-dotenv>=1.0",
]

[project.scripts]
weather = "weather.adapters.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weather"]
