[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "ai-trading"
version = "0.1.0"
description = "A 股与港股 AI 模拟交易系统"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16,<2",
  "apscheduler==3.11.3",
  "exchange-calendars==4.13.2",
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "pydantic>=2.12,<3",
  "pydantic-settings>=2.10,<3",
  "sqlalchemy>=2.0.43,<3",
  "typer>=0.16,<1",
  "uvicorn>=0.35,<1",
  "yfinance>=0.2.65,<1",
]

[project.scripts]
ai-trading = "ai_trading.cli:app"

[dependency-groups]
dev = [
  "mypy>=1.17,<2",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "pytest-cov>=6.2,<7",
  "respx>=0.22,<1",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_trading"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
packages = ["ai_trading"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true
